--- a/package.json
+++ b/package.json
@@ -2,15 +2,6 @@
   "name": "style-selector",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.83.1",
-    "typescript": "^5.7.3",
-    "web-vitals": "^4.2.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -23,20 +14,17 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "cra-template": "1.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react": "^18.2.0",
+    "sass": "^1.83.1",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.0.2",
     "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2"
+    "typescript": "^4.9.5"
   }
 }
