--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "@types/react-dom": "^19.0.2",
     "@types/react": "^19.0.4",
     "typescript": "^4.9.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
